# monorepo-template-generator

./: .eslintrc.cjs  README.md  dev.sh  generate-monorepo-v2.sh  generate-monorepo.sh  package.json  template-README.md
.husky/: pre-push
api/: .env.example  .flake8  .gitignore  README.md  api_test_results_20250812_105351.json  ping_endpoints.py  pyproject.toml  test_api.sh
api/app/: __init__.py  main.py
api/app/api/v1/: api.py
api/app/api/v1/endpoints/: health.py  items.py  users.py
api/app/core/: config.py  logging.py
api/app/schemas/: __init__.py  item.py  user.py
app/: .eslintrc.cjs  index.html  package.json  tailwind.config.cjs
app/src/: App.tsx  index.css
www/: .eslintrc.cjs  astro.config.mjs  package.json  tailwind.config.cjs  tsconfig.eslint.json
www/src/pages/: index.astro
www/src/styles/: global.css
